--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+certifi==2019.3.9
+chardet==3.0.4
 cycler==0.10.0
 docopt==0.6.2
+idna==2.8
 jsonpickle==0.9.6
 kiwisolver==1.1.0
 matplotlib==3.0.3
@@ -9,9 +12,17 @@ Pillow==6.0.0
 py-cpuinfo==5.0.0
 pyparsing==2.4.0
 python-dateutil==2.8.0
+pyzmq==18.0.1
+requests==2.21.0
 sacred==0.7.4
+scipy==1.2.1
 six==1.12.0
 torch==1.1.0
+torchfile==0.1.0
 torchvision==0.2.2.post3
+tornado==6.0.2
 tqdm==4.31.1
+urllib3==1.24.3
+visdom==0.1.8.8
+websocket-client==0.56.0
 wrapt==1.11.1
