--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,10 @@
     "editor.detectIndentation": false,
     "editor.tabSize": 4,
     "editor.insertSpaces": true,
+    "files.insertFinalNewline": true,
+    "files.trimFinalNewlines": true,
+    "python.pythonPath": "env\\Scripts\\python.exe",
+    "python.linting.enabled": false,
+    "python.linting.pylintEnabled": true,
+    // "python.linting.pep8Enabled": true,
 }
