--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,24 @@
+astroid==2.2.5
+autopep8==1.4.4
 certifi==2019.3.9
 chardet==3.0.4
+colorama==0.4.1
 cycler==0.10.0
 docopt==0.6.2
 idna==2.8
+isort==4.3.18
 jsonpickle==0.9.6
 kiwisolver==1.1.0
+lazy-object-proxy==1.4.0
 matplotlib==3.0.3
+mccabe==0.6.1
 munch==2.3.2
 numpy==1.16.3
+pep8==1.7.1
 Pillow==6.0.0
 py-cpuinfo==5.0.0
+pycodestyle==2.5.0
+pylint==2.3.1
 pyparsing==2.4.0
 python-dateutil==2.8.0
 pyzmq==18.0.1
@@ -22,6 +31,7 @@ torchfile==0.1.0
 torchvision==0.2.2.post3
 tornado==6.0.2
 tqdm==4.31.1
+typed-ast==1.3.5
 urllib3==1.24.3
 visdom==0.1.8.8
 websocket-client==0.56.0
