--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ chardet==3.0.4
 colorama==0.4.1
 cycler==0.10.0
 docopt==0.6.2
+future==0.17.1
+gym==0.12.1
 idna==2.8
 isort==4.3.18
 jsonpickle==0.9.6
@@ -18,6 +20,7 @@ pep8==1.7.1
 Pillow==6.0.0
 py-cpuinfo==5.0.0
 pycodestyle==2.5.0
+pyglet==1.3.2
 pylint==2.3.1
 pyparsing==2.4.0
 python-dateutil==2.8.0
